# CoronalScatter

./: .gitignore  .gitmodules  CMakeLists.txt  CheckRandom.py  Constants.h  DensityModel.h  DensityModelCuda.h  DensityScatteringModel.h  FirstPlot.py  LICENSE  Memory.hpp  README.md  Random.h  Random.hpp  Scatter.cpp  Scatter.cu  Scatter_CudaLike.cpp  ScatteringModel.h  SimState.h  SimpleLut.hpp  State.hpp  build.sh  density_model.c  density_model.h  dowload_ispc.sh  gen_density_fn.py  ispc_advance.ispc  plot_all_timesteps.py  plot_some_tracks.py  ray_new.pro
.devcontainer/ubuntu2204/: Dockerfile
source/: Constants.hpp  DensityModel.hpp  LoopUtils.hpp  Random.hpp  Scatter.cpp  Scatter_Cu.cpp  Scatter_CudaLike.cpp  ScatteringModel.hpp  SimpleLut.hpp  State.hpp  TestRandom.cpp  scatter.cpp
